2001-04-30  Martin Baulig  <baulig@suse.de>

	* idl/: New directory.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* configure.in (REBUILT): Added this; copied from gtk+.

2001-04-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nn and no to ALL_LINGUAS.
	
2001-04-18  Michael Meeks  <michael@ximian.com>

	* *.[ch]:
	
	s/\#include[ \t]*<libgnomebase\/gnome-defs.h>//;
	s/BEGIN_GNOME_DECLS/G_BEGIN_DECLS/g;
	s/END_GNOME_DECLS/G_END_DECLS/g;
	
2001-04-17  Martin Baulig  <baulig@suse.de>

	* configure.in: Unconditionally depend on libbonobo; removed the
	`HAVE_LIBBONOBO' automake conditional.
	(LIBGNOME_EXTRA_DEPS): Removed.

2001-04-16  Martin Baulig  <baulig@suse.de>

	* configure.in (HAVE_LIBBONOBO): #define this if we have libbonobo.

2001-04-13  Martin Baulig  <baulig@suse.de>

	NOTE: You must update your gnome-common to make this work !
	
	* configure.in: Optionally depend on libbonobo and define
	`HAVE_LIBBONOBO' automake conditional.
	(LIBGNOME_EXTRA_DEPS): New AC_SUBST'ed variable for our .pc file.

2001-04-12  Martin Baulig  <baulig@suse.de>

	* configure.in (--disable-deprecated): Put back this command
	line argument; also define `EXCLUDE_DEPRECATED' automake
	conditional.

	* acconfig.h (GNOME_EXCLUDE_DEPRECATED_SOURCE): Added.
	(GNOME_EXCLUDE_DEPRECATED): Added.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* libgnome/: This has now been copied over in CVS. There's a
	GNOME_LIBS_MODULE_SPLIT tag which refers to the latest version
	in gnome-libs.

2001-03-24  Anders Carlsson  <andersca@gnu.org>

	* configure.in (DB_LIB): It's gnome-vfs-2.0, not gnomevfs-2.0

2001-03-24  Martin Baulig  <baulig@suse.de>

	* configure.in: Require ORBit >= 2.3.90, not 2.5.7.

2001-03-21  Martin Baulig  <baulig@suse.de>

	* configure.in: Set package name to `libgnome2', looks better
	than `libgnome-2'.

2001-03-21  Martin Baulig  <baulig@suse.de>

	configure.in: Added awk check; use AC_PATH_PROGS in perl check.

	* tools/: New directory.

	* doc/: New directory.
